# pygments-snazzy

./: README.md  pyproject.toml  snazzy_style.py
